--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -57,13 +57,13 @@
   padding: 10px 0px;
   border-radius: 5px;
   position: absolute;
-  bottom: -25px;
+  bottom: -10px;
   width: 100%;
   max-width: 1024px;
 }
 
 .headerIcon {
-  color: lightgray;
+  color: #ec7575;
 }
 
 .headerSearchItem {
@@ -78,6 +78,50 @@
 }
 
 .headerSearchText {
-  color: lightgray;
+  color: #ec7575;
   cursor: pointer;
+}
+
+.date {
+  position: absolute;
+  top: 50px;
+  z-index: 2;
+}
+
+.options {
+  z-index: 2;
+  position: absolute;
+  top: 50px;
+  background-color: white;
+  color: gray;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
+}
+
+.optionItem {
+  width: 200px;
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+}
+
+.optionCounter {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 12px;
+  color: black;
+}
+
+.optionCounterButton {
+  width: 30px;
+  height: 30px;
+  border: 1px solid #0071c2;
+  color: #0071c2;
+  cursor: pointer;
+  background-color: white;
+}
+
+.optionCounterButton:disabled {
+  cursor: not-allowed;
 }
