--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -19,9 +19,12 @@
 }
 
 .navButton {
+  width: 80px;
+  height: 30px;
   margin-left: 20px;
   border: none;
   padding: 5px 10px;
   cursor: pointer;
   color: #003580;
+  border-radius: 10px;
 }
