--- a/src/components/mailList/mailList.css
+++ b/src/components/mailList/mailList.css
@@ -1,6 +1,7 @@
 .mail {
   width: 100%;
   margin-top: 50px;
+  margin-bottom: 20px;
   background-color: #003580;
   color: white;
   display: flex;
